tests/Tuc/Fixtures/errors/IsNotInitiator.tuc
tuc parse error test
participants
    StreamListener parts

StreamListener
